// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classes class-computed-prop.js 1`] = `
"sap.ui.define(["sap/class"], function (Controller) {
  "use strict";

  const name = Symbol("_name");
  const Test = Controller.extend("my.TestController", {
    constructor: function constructor() {
      Controller.prototype.constructor.apply(this, arguments);
      this[name] = null;
      this[name] = 1;
      this[name] = function () {};
      this[name] = async function () {};
      this[name] = () => {};
      this[name] = async () => {};
    }
  });
  Test[name] = null;
  Test[name] = 2;
  Test[name] = () => {};
  Test[name] = function () {};
  Test[name] = async () => {};
  Test[name] = async function () {};
  return Test;
});"
`;

exports[`classes class-convert-all.js 1`] = `
"sap.ui.define(["sap/class"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("fixtures.classes.MyClass", {});
  class BaseClass {}
  class MyError extends Error {}
});"
`;

exports[`classes class-convert-calling-super-apply.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("fixtures.classes.MyController", {
    constructor: function _constructor(arg) {
      console.log("before super");
      Controller.prototype.constructor.call(this, arg);
      console.log("after super");
      this.x = 1;
    },
    method: function _method(args) {
      Controller.prototype.init.apply(this, args);
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-constructor-keep-annot.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("fixtures.classes.MyController", {
    constructor: function constructor(arg) {
      console.log("before super");
      Controller.prototype.constructor.call(this, arg);
      console.log("after super");
      this.x = 1;
    },
    onInit: function onInit() {
      this.other = 1;
      this.ref = this.byId("ref");
      if (typeof Controller.prototype.onInit === 'function') {
        Controller.prototype.onInit.apply(this, arguments);
      }
    },
    get getter() {
      return 1;
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-constructor-keep-default.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("fixtures.classes.MyController", {
    constructor: function _constructor(arg) {
      console.log("before super");
      Controller.prototype.constructor.call(this, arg);
      this.other = 1;
      this.ref = this.byId("ref");
      console.log("after super");
      this.x = 1;
    },
    get getter() {
      return 1;
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-constructor-move.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("fixtures.classes.MyController", {
    onInit: function onInit() {
      this.other = 1;
      this.ref = this.byId("ref");
      console.log("before super");
      console.log("after super");
      this.x = 1;
      if (typeof Controller.prototype.onInit === 'function') {
        Controller.prototype.onInit.apply(this, arguments);
      }
    },
    get getter() {
      return 1;
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-constructor-noargs.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const MyClass = SAPClass.extend("com.app.MyClass", {
    constructor: function _constructor() {
      SAPClass.prototype.constructor.call(this);
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-constructor-spread.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const MyClass = SAPClass.extend("com.app.MyClass", {
    constructor: function _constructor(...args) {
      SAPClass.prototype.constructor.apply(this, [...args]);
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-controller-basic.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (SAPController) {
  "use strict";

  const MyController = SAPController.extend("fixtures.classes.MyController", {});
});"
`;

exports[`classes class-convert-controller-extend-static-assign.js 1`] = `
"sap.ui.define(["sap/SAPController"], function (SAPController) {
  "use strict";

  const MyController = SAPController.extend("test.fixtures.classes.MyController", {
    metadata: meta,
    renderer: {},
    myFormatter: Formatter
  });
  const meta = {};
  const Formatter = {};
  MyController.metadata = meta;
  MyController.renderer = {};
  MyController.myFormatter = Formatter;
  return MyController;
});"
`;

exports[`classes class-convert-controller-extend-static-prop.controller.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPController) {
  "use strict";

  const Formatter = {};
  const MyController = SAPController.extend("fixtures.classes.MyController", {
    metadata: {}
  });
  MyController.myFormatter = Formatter;
  return MyController;
});"
`;

exports[`classes class-convert-controller-extension-static-prop.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/mvc/ControllerExtension"], function (ControllerExtension) {
  "use strict";

  const MyExtension = ControllerExtension.extend("fixtures.classes.MyExtension", {
    overrides: {
      onPageReady: function () {}
    }
  });
  return MyExtension;
});"
`;

exports[`classes class-convert-controller-extension-static-prop-compatibility.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/mvc/ControllerExtension"], function (ControllerExtension) {
  "use strict";

  const MyExtension = ControllerExtension.extend("fixtures.classes.MyExtension", {
    override: {
      onPageReady: function () {}
    }
  });
  return MyExtension;
});"
`;

exports[`classes class-convert-controller-multi.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller", "other"], function (SAPController, __Other) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const Other = _interopRequireDefault(__Other);
  const MyController = SAPController.extend("fixtures.classes.MyController", {});
  const Controller2 = SAPController.extend("fixtures.classes.Controller2", {});
  class NotUI5 extends Other {}
});"
`;

exports[`classes class-convert-controller-w-oninit.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("test.fixtures.classes.MyController", {
    constructor: function _constructor(arg) {
      console.log("constructor");
      Controller.prototype.constructor.call(this, arg);
      this.prop = 1;
      this.prop2 = this.a.b;
      this.prop3 = X.y;
      this.control = this.byId("control");
      this.other = getThing(this.prop);
      this.prop_func = () => true;
      this.x = 1;
    },
    onInit: function _onInit() {
      this.y = this.x + 1;
    },
    get getter() {
      return 1;
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-controller-wo-oninit.controller.js 1`] = `
"sap.ui.define(["sap/ui/core/Controller"], function (Controller) {
  "use strict";

  const MyController = Controller.extend("test.fixtures.classes.MyController", {
    constructor: function _constructor(arg) {
      console.log("constructor");
      Controller.prototype.constructor.call(this, arg);
      this.prop = 1;
      this.prop_func = () => true;
      this.x = 1;
    },
    get getter() {
      return 1;
    }
  });
  return MyController;
});"
`;

exports[`classes class-convert-dec-alias.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.Z", {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-name.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.Z", {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-namespace.controller.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.MyClass", {});
  return MyClass;
});"
`;

exports[`classes class-convert-dec-nonui5.js 1`] = `
"sap.ui.define(["other/NotSAPClass"], function (__NotSAPClass) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const NotSAPClass = _interopRequireDefault(__NotSAPClass);
  @NONUI5
  class MyClass extends NotSAPClass {}
  return MyClass;
});"
`;

exports[`classes class-convert-extend-managed.js 1`] = `
"sap.ui.define(["sap/ui/core/SAPClass", "./Relative"], function (SAPClass, __Relative) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const Relative = _interopRequireDefault(__Relative);
  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    renderer: {},
    metadata: {},
    constructor: function _constructor(arg) {
      console.log("constructor");
      SAPClass.prototype.constructor.call(this, arg);
      this.property_value = 1;
      this.property_arrow_function = () => 1;
      this.x = 1;
    },
    get prop() {
      return 1;
    },
    set prop(val) {
      this.x = val;
    },
    shorthandMethod: function _shorthandMethod(...args) {
      SAPClass.prototype.foo.apply(this, [...args]);
      this.name = Relative.name();
    },
    shorthandConflict: function _shorthandConflict() {
      return shorthandConflict();
    },
    async_shorthand_function: async function _async_shorthand_function(arg) {
      return await 1;
    }
  });
  MyClass.static_shorthand_function = function static_shorthand_function() {
    return 1;
  };
  MyClass.static_property_value = 1;
  MyClass.static_property_arrow = () => 1;
  MyClass.static_async_shorthand_function = async function static_async_shorthand_function() {
    return await 1;
  };
  MyClass.z = function () {
    return "hey";
  };
  function shorthandConflict() {
    return 1;
  }
  return MyClass;
});"
`;

exports[`classes class-convert-file-namespace.controller.controller.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("fixtures.classes.MyClass", {});
  return MyClass;
});"
`;

exports[`classes class-convert-file-namespace-prefixed.controller.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("prefix.fixtures.classes.MyClass", {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-alias.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.Z", {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-name.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.Z", {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-namespace.controller.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.MyClass", {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-namespace.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("x.y.MyClass", {});
  return MyClass;
});"
`;

exports[`classes class-convert-jsdoc-nonui5.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  class MyClass extends SAPClass {}
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-assign.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    metadata: meta,
    renderer: {}
  });
  const meta = {};
  const Formatter = {};
  MyClass.metadata = meta;
  MyClass.renderer = {};
  MyClass.myFormatter = Formatter;
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-assign-nested.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const Formatter = {};
  const meta = {};
  const MyClass = SAPClass.extend("x.y.MyClass", {
    metadata: meta,
    renderer: {}
  });
  MyClass.myFormatter = Formatter;
  MyClass.metadata = meta;
  MyClass.renderer = {};
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-prop.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Formatter = {};
  const mdata = {};
  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    constructor: function constructor() {
      SAPClass.prototype.constructor.apply(this, arguments);
      this.myFormatter = Formatter;
    },
    metadata: mdata
  });
  return MyClass;
});"
`;

exports[`classes class-convert-metadata-static.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Formatter = Formatter;
  const mdata = {};
  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    metadata: mdata
  });
  MyClass.myFormatter = Formatter;
  return MyClass;
});"
`;

exports[`classes class-convert-never.controller.js 1`] = `
"sap.ui.define(["other/OtherClass"], OtherClass => {
  return class MyClass extends OtherClass {
    constructor() {
      super();
    }
  };
});"
`;

exports[`classes class-convert-no-constructor.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const MyClass = SAPClass.extend("com.app.MyClass", {
    constructor: function constructor() {
      SAPClass.prototype.constructor.apply(this, arguments);
      this.property_func = () => {
        return this.getProperty("/name");
      };
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-nonui5-return.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  return class MyClass extends SAPClass {};
});"
`;

exports[`classes class-convert-only-move-this-binding.js 1`] = `
"sap.ui.define(["./lib/util", "sap/ui/core/mvc/Controller"], function (Util, Controller) {
  "use strict";

  const AppController = Controller.extend("app.AppController", {
    constructor: function constructor() {
      Controller.prototype.constructor.apply(this, arguments);
      this.control = this.byId("control");
      this.controlCopy = this.control;
      this.boundSomething = this.something.bind(this);
      this.boundSomething2 = this.something.bind(null, this);
      this.boundSomething3 = Util.something.bind(this);
      this.arrowFunctionMember = () => {
        this.something();
      };
      this.arrowFunctionArgument = () => {
        Object.something(1, this);
      };
      this.arrowFunctionNested = Util.debounce(100, () => {
        setTimeout(() => {
          this.something();
        });
      });
    },
    metadata: {},
    No: "not this",
    No2: Util.callback(function () {
      this.notThis();
    })
  });
  return AppController;
});"
`;

exports[`classes class-convert-options-namedonly.js 1`] = `
"sap.ui.define(["other/OtherClass", "sap/SAPClass"], (OtherClass, SAPClass) => {
  class MyClass extends OtherClass {
    constructor() {
      super();
    }
  }
  const MyUI5Class = SAPClass.extend("my.app.MyUI5Class", {
    constructor: function _constructor() {
      SAPClass.prototype.constructor.call(this);
    }
  });
  return {
    MyClass,
    MyUI5Class
  };
});"
`;

exports[`classes class-convert-with-existing-define-defer-return.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const MyClass = SAPClass.extend("com.app.MyClass", {
    metadata: {
      thing: "string"
    },
    renderer: {},
    constructor: function _constructor(data) {
      SAPClass.prototype.constructor.call(this, data);
      this.property_func = () => {
        return this.getProperty("/name");
      };
    }
  });
  return MyClass;
});"
`;

exports[`classes class-convert-with-existing-define-immediate-return.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const MyClass = SAPClass.extend("com.app.MyClass", {
    metadata: {
      thing: "string"
    },
    renderer: {},
    constructor: function _constructor(data) {
      SAPClass.prototype.constructor.call(this, data);
      this.property_func = () => {
        return this.getProperty("/name");
      };
    }
  });
  return MyClass;
});"
`;

exports[`classes class-fix-with-existing-define.js 1`] = `
"sap.ui.define(["sap/SAPClass"], SAPClass => {
  const X = SAPClass.extend("X", {
    constructor: function constructor(data) {
      SAPClass.prototype.constructor.call(this, data);
    },
    method() {
      return this.getProperty("/name");
    }
  });
  return X;
});"
`;

exports[`classes class-import-meta.js 1`] = `
"sap.ui.define(["require", "module", "sap/SAPClass"], function (require, module, SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    myUrl: function _myUrl() {
      return module.url;
    },
    resolveUrl: function _resolveUrl(url) {
      return require.toUrl(url);
    }
  });
  return MyClass;
});"
`;

exports[`classic sap-ui-define.ts 1`] = `"sap.ui.define("", ["foo/bar/MyResource"]);"`;

exports[`classic sap-ui-define-copyright.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define("", ["foo/bar/MyResource"]);"
`;

exports[`classic sap-ui-define-copyright-file.ts 1`] = `
"/*!
 * \${copyright}
 */

// define class
sap.ui.define("", ["foo/bar/MyResource"]);"
`;

exports[`comments copyright.js 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Levels = SAPClass["Levels"];
  /**
   * @name test.fixtures.libs.MyClass
   */
  const MyClass = SAPClass.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`comments copyright-file.js 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  // some imports
  const Levels = SAPClass["Levels"];
  /**
   * @name test.fixtures.libs.MyClass
   */
  const MyClass = SAPClass.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`comments copyright-multiple-comments.js 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  /**
   * Some other comment
   */
  const Levels = SAPClass["Levels"];
  /**
   * @name test.fixtures.libs.MyClass
   */
  const MyClass = SAPClass.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`comments min-wrap-no-import-copyright.js 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define([], function () {
  "use strict";

  const x = 1; // This should be part of sap-ui-define
  return x;
});"
`;

exports[`comments min-wrap-simple-copyright.js 1`] = `
"/*!
 * \${copyright}
 */
"use strict";

const x = 1; // This should not be part of sap-ui-define
sap.ui.define(["./foo"], function (__Foo) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const Foo = _interopRequireDefault(__Foo);
  const y = Foo(x); // This gets wrapped
  return y;
});"
`;

exports[`comments min-wrap-ui5-copyright.js 1`] = `
"/*!
 * \${copyright}
 */
"use strict";

const x = 1; // This should not be part of sap-ui-define
sap.ui.define(["sap/m/Button"], function (Button) {
  const b = new Button();
  return b;
});"
`;

exports[`comments preserve-for-class-members.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Formatter = Formatter;
  const mdata = {};

  /**
   * @name test.fixtures.classes.MyClass
   */
  const MyClass = SAPClass.extend("test.fixtures.classes.MyClass", {
    constructor: function constructor() {
      SAPClass.prototype.constructor.apply(this, arguments);
      // some comment
      this.myNumber = 1;
    },
    // this property is not moved into the constructor
    overrides: {},
    // this is MY method
    myMethod: function _myMethod() {},
    /**
     * this is also my method
     */
    myOtherMethod: function _myOtherMethod() {}
  });
  /**
   * block comment
   */
  MyClass.myOtherNumber = 42;
  return MyClass;
});"
`;

exports[`decorators mixin.js 1`] = `
"sap.ui.define(["sap/ui/core/mvc/Controller", "../lib/decorators", "../lib/RoutingSupport"], function (Controller, ___lib_decorators, __RoutingSupport) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  var _dec, _class;
  const mixin = ___lib_decorators["mixin"];
  const RoutingSupport = _interopRequireDefault(__RoutingSupport);
  let AppController = (_dec = mixin(RoutingSupport), _dec(_class = class AppController extends Controller {}) || _class);
  return AppController;
});"
`;

exports[`decorators mixin_mixed.js 1`] = `
"sap.ui.define(["sap/ui/core/mvc/Controller", "../lib/decorators", "../lib/RoutingSupport"], function (Controller, ___lib_decorators, __RoutingSupport) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const mixin = ___lib_decorators["mixin"];
  const RoutingSupport = _interopRequireDefault(__RoutingSupport);
  const AppController = Controller.extend("example.controller.AppController", {});
  return AppController;
});"
`;

exports[`decorators ts-class-controller-extension-usage-decorator.ts 1`] = `
"sap.ui.define(["sap/ui/core/mvc/Controller", "sap/fe/core/controllerextensions/Routing"], function (Controller, Routing) {
  "use strict";

  /**
   * @namespace test.controller
   */
  const MyExtendedController = Controller.extend("test.controller.MyExtendedController", {
    routing: Routing
  });
  return MyExtendedController;
});"
`;

exports[`empty empty_js.js 1`] = `""`;

exports[`empty empty_ts.ts 1`] = `""`;

exports[`examples Animal.js 1`] = `
"sap.ui.define(["sap/ui/base/ManagedObject"], function (ManagedObject) {
  "use strict";

  const Animal = ManagedObject.extend("examples.Animal", {
    metadata: {
      properties: {
        type: {
          type: "string"
        },
        nickName: {
          type: "string"
        }
      }
    },
    constructor: function _constructor(...args) {
      ManagedObject.prototype.constructor.apply(this, [...args]);
    },
    init: function _init() {
      ManagedObject.prototype.init.call(this);
    },
    callMe: function _callMe() {
      alert(\`I"m a \${this.getType()}.
        Call me \${this.getNickName()}.\`);
    }
  });
  return Animal;
});"
`;

exports[`examples Cat.js 1`] = `
"sap.ui.define(["./Animal"], function (__Animal) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const Animal = _interopRequireDefault(__Animal);
  const Cat = Animal.extend("othernamespace.Cat", {
    init: function _init() {
      Animal.prototype.init.call(this);
      this.setType("Cat");
    },
    callMe: function _callMe() {
      Animal.prototype.callMe.call(this);
      alert("Miao~");
    }
  });
  Cat.createCat = function createCat(nickName) {
    const cat = new example.obj.Cat({
      nickName
    });
    return cat;
  };
  return Cat;
});"
`;

exports[`examples MyError.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  class MyError extends Error {
    constructor(msg) {
      super(msg);
      this.name = "MyError";
    }
  }
  return MyError;
});"
`;

exports[`examples Utils.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function multiply(a, b) {
    return a * b;
  }
  function add(a, b) {
    return a + b;
  }
  var __exports = {
    multiply,
    add
  };
  return __exports;
});"
`;

exports[`export-collapse _extends-literal.js 1`] = `
"sap.ui.define(["x"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const one = 1;
  function two() {}
  const three = 3;
  const O2 = {
    three
  };
  var __exports = _extends({}, X, O2, {
    one,
    two
  });
  return __exports;
});"
`;

exports[`export-collapse _extends-variable.js 1`] = `
"sap.ui.define(["x"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const one = 1;
  function two() {}
  function three() {}
  function four() {}
  const O2 = {
    three
  };
  let D;
  D = _extends({}, X, O2, {
    one,
    two
  });
  D.four = four;
  D.one = one;
  D.two = two;
  D.three = three;
  return D;
});"
`;

exports[`export-collapse add-props-obj.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function one() {}
  function two() {}
  const X = {
    one,
    foo: one
  };
  X.two = two;
  X.bar = two;
  return X;
});"
`;

exports[`export-collapse object.assign-literal.js 1`] = `
"sap.ui.define(["x"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const one = 1;
  const two = "2";
  function foo() {}
  const anotherN = 0;
  const anotherS = "s";
  var __exports = Object.assign({}, X, {
    one: 1,
    two: "2",
    foo
  });
  __exports.anotherN = anotherN;
  __exports.anotherS = anotherS;
  return __exports;
});"
`;

exports[`export-collapse object.assign-variable.js 1`] = `
"sap.ui.define(["x"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const one = 1;
  function two() {}
  const three = 3;
  function five() {}
  function six() {}
  const anotherConst = 9;
  function otherFN() {}
  const O2 = {
    six
  };
  const Utils = Object.assign({}, X, {
    one,
    two
  }, {
    five
  }, O2);
  Utils.three = 3;
  Utils.anotherConst = anotherConst;
  Utils.otherFN = otherFN;
  return Utils;
});"
`;

exports[`export-error error-assign-var.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (foo)."`;

exports[`export-error error-assign-var-recurs.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (foo)."`;

exports[`export-error error-obj-method.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (a)."`;

exports[`export-error error-obj-prop.js 1`] = `"Unsafe mixing of conflicting default and named exports. The following named exports are conflicting: (a)."`;

exports[`export-mixed export-mixed-anon-func.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = function () {
    console.log("I am the default");
  };
  const named = {};
  __exports.named = named;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-arrow.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = () => {
    return 1;
  };
  const two = 2;
  __exports.two = two;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-literal.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const a = 1;
  const b = 2;
  var __exports = {
    a,
    x: a
  };
  const c = 3;
  __exports.b = b;
  __exports.y = b;
  __exports.c = c;
  return __exports;
});"
`;

exports[`export-mixed export-mixed-named-func.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function def() {
    console.log("I am the default");
  }
  def.hey = "hey";
  const named = {};
  def.def = def;
  def.named = named;
  return def;
});"
`;

exports[`exports export-class.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function hello() {
    return "hey";
  }
  class Thing {
    constructor() {
      console.log("constructor");
    }
  }
  Thing.foo = hello;
  return Thing;
});"
`;

exports[`exports export-class-extend-native.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  class MyError extends Error {
    constructor(m) {
      super(m);
      console.log("constructor");
      this.name = "MyError";
    }
  }
  return MyError;
});"
`;

exports[`exports export-default-anon-function.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  let one = 1;
  var __exports = async function () {
    return (await one) + two;
  };
  let two = 2;
  return __exports;
});"
`;

exports[`exports export-default-arrow-function.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  let one = 1;
  var __exports = () => {
    return one + two;
  };
  let two = 2;
  return __exports;
});"
`;

exports[`exports export-default-identifier.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const x = {};
  x.a = 1;
  return x;
});"
`;

exports[`exports export-default-named-function.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  let one = 1;
  function add() {
    return one + two + this.x;
  }
  add.x = 3;
  let two = 2;
  return add;
});"
`;

exports[`exports export-multiple.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const thing1 = {};
  const thing2 = 2;
  const thingy3 = 3;
  const c = 1;
  var v = 1;
  let l = 1;
  function f() {}
  let laterLet;
  laterLet = "now";
  var laterVar;
  laterVar = "var";
  var __exports = {
    __esModule: true
  };
  __exports.thing1 = thing1;
  __exports.thing2 = thing2;
  __exports.thing3 = thingy3;
  __exports.c = c;
  __exports.v = v;
  __exports.l = l;
  __exports.f = f;
  __exports.laterLet = laterLet;
  __exports.laterVar = laterVar;
  return __exports;
});"
`;

exports[`exports export-named-as-default.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const one = 1;
  var __exports = {
    __esModule: true
  };
  __exports.default = one;
  return __exports;
});"
`;

exports[`exports export-named-from.js 1`] = `
"sap.ui.define(["A", "path/having-dash"], function (__A, __path_having_dash) {
  "use strict";

  var __exports = {
    __esModule: true
  };
  __exports.A = __A.A;
  __exports.B = __A.B;
  __exports.C = __path_having_dash.C;
  __exports.D = __path_having_dash.D;
  return __exports;
});"
`;

exports[`exports export-obj.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function getFoo() {
    return 1;
  }
  function bar() {
    return 2;
  }
  var __exports = {
    foo: getFoo(),
    bar
  };
  return __exports;
});"
`;

exports[`flow flow-exports.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Foo = SAPClass.extend("Foo", {});
  return Foo;
});"
`;

exports[`imports import-all.js 1`] = `
"sap.ui.define(["G"], function (G) {
  "use strict";

  return G;
});"
`;

exports[`imports import-at-sign.js 1`] = `
"sap.ui.define(["@babel/polyfill", "dash-separated"], function (___babel_polyfill, __dash_separated) {
  "use strict";
});"
`;

exports[`imports import-duplicate-src-1.js 1`] = `
"sap.ui.define(["X"], function (XA) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const XD = _interopRequireDefault(XA);
  const X2 = XA["X2"];
  const X3 = XA["X3"];
});"
`;

exports[`imports import-duplicate-src-2.js 1`] = `
"sap.ui.define(["X"], function (__XD) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const XD = _interopRequireDefault(__XD);
  const X2 = __XD["X2"];
  const XA = __XD;
  const X3 = __XD["X3"];
});"
`;

exports[`imports import-duplicate-src-3.js 1`] = `
"sap.ui.define(["X"], function (__XD) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const XD = _interopRequireDefault(__XD);
  const XA = __XD;
  const X2 = __XD["X2"];
  const X3 = __XD["X3"];
});"
`;

exports[`imports import-dynamic.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  function __ui5_require_async(path) {
    return new Promise(function (resolve, reject) {
      sap.ui.require([path], function (module) {
        if (!(module && module.__esModule)) {
          module = module === null || !(typeof module === "object" && path.endsWith("/library")) ? {
            default: module
          } : module;
          Object.defineProperty(module, "__esModule", {
            value: true
          });
        }
        resolve(module);
      }, function (err) {
        reject(err);
      });
    });
  }
  async function getItAA() {
    const SAPModule = await __ui5_require_async("sap/SAPModule");
    return SAPModule.default;
  }
  function getItThen() {
    return __ui5_require_async("my/Module").then(MyModule => {
      return MyModule.default;
    });
  }
});"
`;

exports[`imports import-modules-map.js 1`] = `
"sap.ui.define(["./vendor/browser-polyfill"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const Named1 = __X["Named1"];
  const Named2 = __X["Named2"];
  const X2 = __X;
});"
`;

exports[`imports import-modules-map-fn.js 1`] = `
"sap.ui.define(["./vendor/browser-polyfill"], function (__X) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const X = _interopRequireDefault(__X);
  const Named1 = __X["Named1"];
  const Named2 = __X["Named2"];
  const X2 = __X;
});"
`;

exports[`imports import-multiple.js 1`] = `
"sap.ui.define(["./../a/b", "path/having-dash", "A", "BC", "DEF", "G", "HI"], function (____a_b, __path_having_dash, __A, __BC, __D, G, __H) {
  "use strict";

  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const A = _interopRequireDefault(__A);
  const B = __BC["B"];
  const C = __BC["C"];
  const D = _interopRequireDefault(__D);
  const E = __D["E"];
  const F = __D["F"];
  const H = _interopRequireDefault(__H);
  const I = __H;
});"
`;

exports[`imports import-remove-fileext.js 1`] = `
"sap.ui.define(["@dummy/chart.js", "chart.js", "array-flatten/dist/index", "./_private_/module_js", "./_private_/module_jsx", "./_private_/module_ts", "./_private_/module_tsx", "./_private_/unknown_module.js"], function (___dummy_chartjs, __chartjs, __array_flatten_dist_indexjs, ____private__module_jsjs, ____private__module_jsxjs, ____private__module_tsjs, ____private__module_tsxjs, ____private__unknown_modulejs) {
  "use strict";
});"
`;

exports[`libs libs-other-imports.js 1`] = `
"import _ from "lodash";
sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Levels = SAPClass["Levels"];
  const MyClass = SAPClass.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`libs libs-sap-imports.js 1`] = `
"sap.ui.define(["sap/SAPClass"], function (SAPClass) {
  "use strict";

  const Levels = SAPClass["Levels"];
  const MyClass = SAPClass.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`libs libs-sap-imports-dashes.js 1`] = `
"sap.ui.define(["sap/SAPClass-with-dashes"], function (SAPClassDashes) {
  "use strict";

  const Levels = SAPClassDashes["Levels"];
  const MyClass = SAPClassDashes.extend("test.fixtures.libs.MyClass", {});
  MyClass.Levels = Levels;
  return MyClass;
});"
`;

exports[`min-wrap min-wrap-no-import.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const x = 1;
  return x;
});"
`;

exports[`min-wrap min-wrap-simple.js 1`] = `
""use strict";

const x = 1;
sap.ui.define(["./foo"], function (__Foo) {
  function _interopRequireDefault(obj) {
    return obj && obj.__esModule && typeof obj.default !== "undefined" ? obj.default : obj;
  }
  const Foo = _interopRequireDefault(__Foo);
  const y = Foo(x);
  return y;
});"
`;

exports[`min-wrap min-wrap-ui5.js 1`] = `
""use strict";

const x = 1;
sap.ui.define(["sap/m/Button"], function (Button) {
  const b = new Button();
  return b;
});"
`;

exports[`mixed mixed-import-export.js 1`] = `
"sap.ui.define(["1", "2", "3", "4", "5"], function (__1, __2, __3, __4, __5) {
  "use strict";

  var __exports = {
    __esModule: true
  };
  function extendExports(exports, obj) {
    obj && Object.keys(obj).forEach(function (key) {
      if (key === "default" || key === "__esModule") return;
      Object.defineProperty(exports, key, {
        enumerable: true,
        get: function get() {
          return obj[key];
        }
      });
    });
  }
  extendExports(__exports, __1);
  __exports.a = __2.a;
  __exports.b2 = __2.b;
  __exports.default = __3.default;
  __exports.default2 = __4.default;
  __exports.x = __5.v;
  return __exports;
});"
`;

exports[`never-use-strict use-strict-define.js 1`] = `
"sap.ui.define(["sap/m/Button"], function (Button) {
  const b = new Button();
  return b;
});"
`;

exports[`never-use-strict use-strict-program.js 1`] = `
"const x = 1;
sap.ui.define(["sap/m/Button"], function (Button) {
  const b = new Button();
  return b;
});"
`;

exports[`no-wrap nowrap-existing-sap.ui.define.js 1`] = `
"sap.ui.define(["JSONModel"], JSONModel => {
  return new JSONModel();
});"
`;

exports[`no-wrap skip-iffe.js 1`] = `
"(function () {
  window.x = {};
})();"
`;

exports[`preset-env preset-env-class.js 1`] = `
"sap.ui.define(["sap/class"], function (SAPClass) {
  "use strict";

  var MyClass = SAPClass.extend("my.MyClass", {
    constructor: function constructor() {
      SAPClass.prototype.constructor.apply(this, arguments);
      this.x = 1;
    },
    fn: function _fn() {
      var _this = this;
      setTimeout(function () {
        SAPClass.prototype.fn.call(_this);
      });
    }
  });
  MyClass.X = 1;
  return MyClass;
});"
`;

exports[`preset-env preset-env-property-mutators.js 1`] = `
"sap.ui.define(["sap/class", "core-js/modules/es6.object.define-properties.js"], function (SAPClass, __core_js_modules_es6objectdefine_propertiesjs) {
  "use strict";

  var MyClass = SAPClass.extend("my.MyClass", Object.defineProperties({}, {
    thing: {
      get: function get() {
        return this._thing;
      },
      set: function set(value) {
        this._thing = value;
      },
      configurable: true,
      enumerable: true
    }
  }));
  return MyClass;
});"
`;

exports[`preset-env preset-env-usage.js 1`] = `
"sap.ui.define(["sap/SAPClass", "core-js/modules/es6.object.to-string.js", "core-js/modules/es6.promise.js", "core-js/modules/es6.string.includes.js", "core-js/modules/es7.array.includes.js"], function (SAPClass, __core_js_modules_es6objectto_stringjs, __core_js_modules_es6promisejs, __core_js_modules_es6stringincludesjs, __core_js_modules_es7arrayincludesjs) {
  "use strict";

  var AClass = SAPClass.extend("my.MyClass", {
    delay: function _delay() {
      return new Promise(function (resolve) {
        setTimeout(resolve);
      });
    },
    includes: function _includes(str) {
      return str.includes("thing");
    }
  });
  return AClass;
});"
`;

exports[`typescript ts-class-anonymous.ts 1`] = `
"sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new class {
        getClipboardContentType() {}
      }();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-anonymous-copyright.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  const MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new class {
        getClipboardContentType() {
          /* ... */
        }
      }();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-anonymous-copyright-file.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  const MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new class {
        getClipboardContentType() {
          /* ... */
        }
      }();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-controller-extension-usage.ts 1`] = `
"sap.ui.define(["sap/ui/core/mvc/Controller", "sap/fe/core/controllerextensions/Routing", "sap/fe/core/controllerextensions/OtherExtension", "sap/fe/core/controllerextensions/ThirdExtension", "sap/fe/core/controllerextensions/DoubleExportExtension", "sap/fe/core/controllerextensions/ManyExtensions"], function (Controller, Routing, sap_fe_core_controllerextensions_OtherExtension, ThirdExtension, sap_fe_core_controllerextensions_DoubleExportExtension, extensionCollection) {
  "use strict";

  const OtherExtension = sap_fe_core_controllerextensions_OtherExtension["OtherExtension"];
  const SomethingElse = sap_fe_core_controllerextensions_DoubleExportExtension["SomethingElse"];
  const AlmostRemovedExtension = sap_fe_core_controllerextensions_DoubleExportExtension["AlmostRemovedExtension"];
  /**
   * @namespace test.controller
   */
  const MyExtendedController = Controller.extend("test.controller.MyExtendedController", {
    // @transformControllerExtension
    fifth: extensionCollection.group.OneOfManyExtensions,
    // @transformControllerExtension
    fourth: AlmostRemovedExtension,
    // @transformControllerExtension
    third: ThirdExtension,
    // @transformControllerExtension
    other: OtherExtension,
    /**
     * @transformControllerExtension
     */
    routing: Routing,
    constructor: function _constructor() {
      Controller.prototype.constructor.call(this);
      this.realPropertyExtension = SomethingElse.Something;
    }
  });
  return MyExtendedController;
});"
`;

exports[`typescript ts-class-param-props.ts 1`] = `
"sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-param-props-copyright.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  const MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-param-props-copyright-file.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  const MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`typescript ts-class-props.ts 1`] = `
"sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("MyClass", {
    constructor: function constructor() {
      SAPClass.prototype.constructor.apply(this, arguments);
      this.S = "S";
      this.PS = "PS";
      this.PRS = "PRS";
    }
  });
  MyClass.SS = "SS";
  MyClass.PSS = "PSS";
  MyClass.PSRS = "PSRS";
});"
`;

exports[`typescript ts-class-props-only-move-this.ts 1`] = `
"sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  const MyClass = SAPClass.extend("MyClass", {
    S: "S",
    PS: "PS",
    PRS: "PRS"
  });
  MyClass.SS = "SS";
  MyClass.PSS = "PSS";
  MyClass.PSRS = "PSRS";
});"
`;

exports[`typescript ts-export-default-typed-anon-fn-only-default.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = function (date) {
    return "";
  };
  return __exports;
});"
`;

exports[`typescript ts-export-default-typed-anon-obj.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = {
    x: 1
  };
  return __exports;
});"
`;

exports[`typescript ts-export-default-typed-arrow-fn-only-default.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const fn = date => {
    return "";
  };
  var __exports = date => {
    return "";
  };
  return __exports;
});"
`;

exports[`typescript ts-export-default-typed-arrow-fn-with-named.1.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const fn = date => {
    return "";
  };
  var __exports = date => {
    return "";
  };
  __exports.fn = fn;
  return __exports;
});"
`;

exports[`typescript ts-export-interface.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const MY_CONSTANT = "constant";
  var MyEnum = function (MyEnum) {
    MyEnum[MyEnum["A"] = 0] = "A";
    MyEnum[MyEnum["B"] = 1] = "B";
    MyEnum[MyEnum["C"] = 2] = "C";
    return MyEnum;
  }(MyEnum || {});
  ;
  var __exports = {
    __esModule: true
  };
  __exports.MY_CONSTANT = MY_CONSTANT;
  __exports.MyEnum = MyEnum;
  return __exports;
});"
`;

exports[`typescript ts-export-type.ts 1`] = `
"sap.ui.define([], function () {
  "use strict";

  class Class {}
  var __exports = {
    __esModule: true
  };
  __exports.Class = Class;
  return __exports;
});"
`;

exports[`typescript ts-export-type-only.ts 1`] = `""`;

exports[`typescript ts-index.ts 1`] = `
"sap.ui.define(["./_private_/index"], function (____private__index) {
  "use strict";

  var __exports = {
    __esModule: true
  };
  function extendExports(exports, obj) {
    obj && Object.keys(obj).forEach(function (key) {
      if (key === "default" || key === "__esModule") return;
      Object.defineProperty(exports, key, {
        enumerable: true,
        get: function get() {
          return obj[key];
        }
      });
    });
  }
  extendExports(__exports, ____private__index);
  return __exports;
});"
`;

exports[`typescript ts-re-export.ts 1`] = `
"sap.ui.define(["module", "./having-a-dash", "path/having-a-dash"], function (__module, ___having_a_dash, __path_having_a_dash) {
  "use strict";

  var __exports = {
    __esModule: true
  };
  function extendExports(exports, obj) {
    obj && Object.keys(obj).forEach(function (key) {
      if (key === "default" || key === "__esModule") return;
      Object.defineProperty(exports, key, {
        enumerable: true,
        get: function get() {
          return obj[key];
        }
      });
    });
  }
  extendExports(__exports, __module);
  extendExports(__exports, ___having_a_dash);
  extendExports(__exports, __path_having_a_dash);
  return __exports;
});"
`;

exports[`typescript ts-re-export-type-only.ts 1`] = `
"sap.ui.define(["./ts-export-type-only"], function (___ts_export_type_only) {
  "use strict";

  var __exports = {
    __esModule: true
  };
  function extendExports(exports, obj) {
    obj && Object.keys(obj).forEach(function (key) {
      if (key === "default" || key === "__esModule") return;
      Object.defineProperty(exports, key, {
        enumerable: true,
        get: function get() {
          return obj[key];
        }
      });
    });
  }
  extendExports(__exports, ___ts_export_type_only);
  return __exports;
});"
`;

exports[`typescript-preset-env ts-class-anonymous.ts 1`] = `
"sap.ui.define(["sap/Class", "core-js/modules/es6.symbol.js", "core-js/modules/es6.number.constructor.js"], function (SAPClass, __core_js_modules_es6symboljs, __core_js_modules_es6numberconstructorjs) {
  "use strict";

  function _typeof(o) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (o) { return typeof o; } : function (o) { return o && "function" == typeof Symbol && o.constructor === Symbol && o !== Symbol.prototype ? "symbol" : typeof o; }, _typeof(o); }
  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
  function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return typeof key === "symbol" ? key : String(key); }
  function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
  var MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new (function () {
        function _class() {
          _classCallCheck(this, _class);
        }
        _createClass(_class, [{
          key: "getClipboardContentType",
          value: function getClipboardContentType() {}
        }]);
        return _class;
      }())();
    }
  });
  return MyClass;
});"
`;

exports[`typescript-preset-env ts-class-anonymous-copyright.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class", "core-js/modules/es6.symbol.js", "core-js/modules/es6.number.constructor.js"], function (SAPClass, __core_js_modules_es6symboljs, __core_js_modules_es6numberconstructorjs) {
  "use strict";

  function _typeof(o) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (o) { return typeof o; } : function (o) { return o && "function" == typeof Symbol && o.constructor === Symbol && o !== Symbol.prototype ? "symbol" : typeof o; }, _typeof(o); }
  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
  function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return typeof key === "symbol" ? key : String(key); }
  function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
  /**
   * @name MyClass
   */
  var MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new ( /*#__PURE__*/function () {
        function _class() {
          _classCallCheck(this, _class);
        }
        _createClass(_class, [{
          key: "getClipboardContentType",
          value: function getClipboardContentType() {
            /* ... */
          }
        }]);
        return _class;
      }())();
    }
  });
  return MyClass;
});"
`;

exports[`typescript-preset-env ts-class-anonymous-copyright-file.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class", "core-js/modules/es6.symbol.js", "core-js/modules/es6.number.constructor.js"], function (SAPClass, __core_js_modules_es6symboljs, __core_js_modules_es6numberconstructorjs) {
  "use strict";

  function _typeof(o) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (o) { return typeof o; } : function (o) { return o && "function" == typeof Symbol && o.constructor === Symbol && o !== Symbol.prototype ? "symbol" : typeof o; }, _typeof(o); }
  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
  function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return typeof key === "symbol" ? key : String(key); }
  function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
  /**
   * @name MyClass
   */
  var MyClass = SAPClass.extend("MyClass", {
    createAnonymousClass: function _createAnonymousClass() {
      return new ( /*#__PURE__*/function () {
        function _class() {
          _classCallCheck(this, _class);
        }
        _createClass(_class, [{
          key: "getClipboardContentType",
          value: function getClipboardContentType() {
            /* ... */
          }
        }]);
        return _class;
      }())();
    }
  });
  return MyClass;
});"
`;

exports[`typescript-preset-env ts-class-param-props.ts 1`] = `
"sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  var MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`typescript-preset-env ts-class-param-props-copyright.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  var MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`typescript-preset-env ts-class-param-props-copyright-file.ts 1`] = `
"/*!
 * \${copyright}
 */
sap.ui.define(["sap/Class"], function (SAPClass) {
  "use strict";

  /**
   * @name MyClass
   */
  var MyClass = SAPClass.extend("MyClass", {
    constructor: function _constructor(bar, x, y) {
      SAPClass.prototype.constructor.call(this);
      this.bar = bar;
      this.x = x;
      this.y = y;
      this.foo = bar.getFoo();
    }
  });
  return MyClass;
});"
`;

exports[`wrapping export-const.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  const X = {};
  return X;
});"
`;

exports[`wrapping export-jsdoc-global.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = {};
  return __exports;
}, true);"
`;

exports[`wrapping export-literal.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = {};
  return __exports;
});"
`;

exports[`wrapping export-options-global.js 1`] = `
"sap.ui.define([], function () {
  "use strict";

  var __exports = {};
  return __exports;
}, true);"
`;
